--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,7 +1,10 @@
 .Weather {
   display: block;
   margin: 0 auto;
-  background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)),
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.7),
+      rgba(255, 255, 255, 0.7)
+    ),
     url("../media/day.jpg");
   max-width: 800px;
   color: rgb(0, 0, 0);
@@ -49,7 +52,8 @@
 }
 
 .Loading {
-  color: greenyellow;
+  font-weight: 800;
+  color: rgb(0, 0, 0);
 }
 
 .Units a:hover {
@@ -75,5 +79,4 @@
   .InputCity-Submit {
     width: 100px;
   }
-
 }
